--- a/decrypt.html
+++ b/decrypt.html
@@ -13,12 +13,18 @@
         <div class="box">
             <form>
                 <span class="text-center">CRYPT YOUR DARKEST SECRETS</span>
-                <div class="button-container">
-                    <a href="encrypt.html" class="btn">Encrypt</a>
-                    <a href="decrypt.html" class="btn">Decrypt</a>
+                <div class="input-container">
+                    <input type="text" required="" />
+                    <label>Enter cyphered text</label>
                 </div>
+                <div class="input-container">
+                    <input type="text" required="" />
+                    <label>Enter crypt key</label>
+                </div>
+                <button type="button" class="btn">submit</button>
             </form>
         </div>
     </main>
+
 </body>
 </html>
