--- a/encrypt.html
+++ b/encrypt.html
@@ -13,12 +13,23 @@
         <div class="box">
             <form>
                 <span class="text-center">CRYPT YOUR DARKEST SECRETS</span>
-                <div class="button-container">
-                    <a href="encrypt.html" class="btn">Encrypt</a>
-                    <a href="decrypt.html" class="btn">Decrypt</a>
+                <div class="input-container">
+                    <input type="text" required="" />
+                    <label>Enter cypher text</label>
                 </div>
+                <div class="input-container">
+                    <input type="text" required="" />
+                    <label>Enter crypt key</label>
+                </div>
+                <button type="button" class="btn">submit</button>
             </form>
         </div>
     </main>
+
+    <script>
+        function goBack() {
+        window.history.back();
+        }
+    </script>
 </body>
 </html>
