--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
                         <input type="text" required="" />
                         <label>Enter crypt key</label>
                     </div>
-                    <div class="input-container">
-                        <output type="text" required="" />
-                        <label>Output is here </label>
-                    </div>
+
                     <button type="button" class="btn">cypher</button>
                     <button type="button" class="btn">de-cypher</button>
+
+                    <div class="input-container">
+                        <output type="text" required="" />
+                        <label>Output go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yesOutput go here here yes</label>
+                    </div>
                 </form>
             </div>
         </div>
